@@ -384,6 +384,8 @@ table.insert(tests, "persistent_netsync_server_-_keys")
 table.insert(tests, "first_extent_normalization_pass")
 table.insert(tests, "(imp)_deleting_directories")
 table.insert(tests, "schema_migration")
+table.insert(tests, "schema_migration_bad_schema")
+table.insert(tests, "schema_migration_with_rosterify")
 table.insert(tests, "database_dump_load")
 table.insert(tests, "no-change_deltas_disappear")
 table.insert(tests, "merge((),_(drop_a,_rename_b_a,_patch_a))")
@@ -565,7 +567,6 @@ table.insert(tests, "db_kill_tag_locally")
 table.insert(tests, "diff_-rREV1_-rREV2_UNCHANGED-FILE")
 table.insert(tests, "b_t_and_a_selector_globbing")
 table.insert(tests, "diff_--external")
-table.insert(tests, "db_migrate_on_bad_schema")
 table.insert(tests, "list_branches")
 table.insert(tests, "unnormalized_paths_in_database")
 table.insert(tests, "annotate_with_no_revs")
@@ -597,7 +598,6 @@ table.insert(tests, "annotate_file_whose_name_changed")
 table.insert(tests, "_--confdir_option_and_get_confdir_lua_function_work")
 table.insert(tests, "database_is_closed_on_signal_exit")
 table.insert(tests, "update_-b_switches_branches_even_when_noop")
-table.insert(tests, "migrate_with_rosterify")
 table.insert(tests, "rosterify_migrates_file_dir_attrs")
 table.insert(tests, "db_rosterify_preserves_renames")
 table.insert(tests, "restrictions_when_pwd_is_mixed_case")
